CommercialApp/objects/Time_Bucket__c.object
<CustomObject>
    <fields>
        <fullName>Current_Num_Business_Day__c</fullName>
        <label>Current Num Business Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Time_End_Date__c</fullName>
        <label>Current Time End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Time_Start_Date__c</fullName>
        <label>Current Time Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Num_Business_Day__c</fullName>
        <label>Previous Num Business Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Time_End_Date__c</fullName>
        <label>Previous Time End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Time_Start_Date__c</fullName>
        <label>Previous Time Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recency__c</fullName>
        <label>Recency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Cycle_Date__c</fullName>
        <label>Report Cycle Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <label>Source Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Bucket_Frequency__c</fullName>
        <label>Time Bucket Frequency</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Bucket_Key__c</fullName>
        <label>Time Bucket Key</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Bucket_Name__c</fullName>
        <label>Time Bucket Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Bucket_Type__c</fullName>
        <label>Time Bucket Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Key__c</fullName>
        <label>Time Key</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Name__c</fullName>
        <label>Time Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Time Bucket</label>
    <nameField>
        <label>Time Bucket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Buckets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>